[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pingu"
version = "0.1.0"
description = "Lightweight homelab network monitor"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.38",
  "psycopg[binary]==3.2.4",
  "alembic==1.14.1",
  "pydantic-settings==2.7.1",
  "pyyaml==6.0.2",
  "httpx==0.28.1",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
